src/objects/Avalon_Guest_Card_Quote__c.object
<CustomObject>
    <fields>
        <fullName>AptType__c</fullName>
        <label>Apt. Type:</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AvalonGuestCard__c</fullName>
        <label>Avalon Guest Card</label>
        <referenceTo>Avalon_Guest_Card__c</referenceTo>
        <relationshipLabel>Avalon Guest Card Quotes</relationshipLabel>
        <relationshipName>Avalon_Guest_Card_Quotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LeaseTerm__c</fullName>
        <label>Lease term:</label>
        <picklist>
            <picklistValues>
                <fullName>12</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MoveInDate__c</fullName>
        <label>Move in Date:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuoteDate__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Date:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rent__c</fullName>
        <label>Rent:</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Apt #:</label>
        <referenceTo>Unit__c</referenceTo>
        <relationshipLabel>Avalon Guest Card Quotes</relationshipLabel>
        <relationshipName>Avalon_Guest_Card_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Avalon Guest Card Quote</label>
    <nameField>
        <displayFormat>AGCQ-{00}</displayFormat>
        <label>Avalon Guest Card Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avalon Guest Card Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>